fix carousel icon alignemnt

--- a/src/scss/01-foundations/_icon-library-odc.scss
+++ b/src/scss/01-foundations/_icon-library-odc.scss
@@ -342,10 +342,12 @@
 
 .splide__arrow--next:after {
 	content: var(--osui-icon-chevron-right);
+	transform: translateX(1px);
 }
 
 .splide__arrow--prev:after {
 	content: var(--osui-icon-chevron-left);
+	transform: translateX(-1px);
 }
 
 // DatePicker / MonthPicker (Flatpickr)
